Bug fixes and the first successful unit test, which parses the us-gaap-2013-01-31.xsd schema.
Following the xbrl node takes a really long time - over four minutes.
This is in contrast to 3 seconds in a previous walker I wrote for the
same file.

Debugging will be required to track this one down.